light/dark mode added, colors need to be fixed

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.page {
+  min-height: 100vh;
+  min-width: 100vw;
   background-color: var(--main-bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .calculator-grid {
@@ -80,4 +89,10 @@ body {
   color: var(--output-text-color);
   font-size: 2rem;
   font-weight: 600;
+}
+
+#light-and-dark {
+  width: 20%;
+  height: 20px;
+  margin: 5px;
 }
